--- a/Day04/02_menu/css/01_market-menu.css
+++ b/Day04/02_menu/css/01_market-menu.css
@@ -19,19 +19,29 @@ body { font-family: 'Noto Sans KR', sans-serif; }
     content: '';
 }
 
+/* header */
 header { margin-bottom: 20px; }
 
+/* header - userMenu */
 #userMenu { width: 1050px; margin: 0 auto; }
 #userMenu * {
     font-weight: 400;
     letter-spacing: -1px;
 }
 
-#userMenu .list_menu { display: flex; justify-content: flex-end; }
+#userMenu .list_menu { 
+    display: flex;
+    justify-content: flex-end;
+}
+
 #userMenu .menu {
     position: relative;
 }
 
+/* userMenu 구분기호 */
+/* :not(제외할 선택자) 
+  - 지정된 여러 개의 선택자 중에서 제외시킨다 
+*/
 #userMenu .menu:not(.lst):after {
     content: '';
     float: right;
@@ -43,10 +53,12 @@ header { margin-bottom: 20px; }
 
 #userMenu .menu .link_menu { padding: 0 13px; }
 
+/* header - headerLogo */
 #headerLogo { position: relative; width: 1050px; height: 63px; margin: 0 auto; }
 #headerLogo .logo { display: flex; justify-content: center; }
 #headerLogo .logo img { width: 103px; height: 79px; }
 
+/* gnb */
 #gnb {
     position: sticky;
     top: 0;
@@ -68,6 +80,7 @@ header { margin-bottom: 20px; }
 }
 #gnb .gnb_main {}
 
+/* 메뉴영역 */
 #gnb .gnb_main ul.gnb a {
     float: left;
     width: 124px;
@@ -84,6 +97,7 @@ header { margin-bottom: 20px; }
     border-bottom: 1.5px solid #5f0080;
 }
 
+/* 메뉴 영역 - 전체카테고리 아이콘 */
 #gnb .gnb_main .menu1 .ico {
     float: left;
     width: 16px;
@@ -92,6 +106,7 @@ header { margin-bottom: 20px; }
     background: url(../img/ico_gnb_all_off.png) no-repeat;
 }
 
+/* 검색 영역 */
 #gnb .gnb_search {
     position: absolute;
     right: 108px;
@@ -99,6 +114,7 @@ header { margin-bottom: 20px; }
     width: 223px;
 }
 
+/* 검색 영역 - 입력상자 */
 #gnb .gnb_search .inp_search {
     width: 195px;
     height: 36px;
@@ -113,6 +129,7 @@ header { margin-bottom: 20px; }
     outline: none;
 }
 
+/* 검색 영역 - 검색 아이콘 */
 #gnb .gnb_search .btn_search {
     position: absolute;
     right: 5px;
@@ -121,6 +138,7 @@ header { margin-bottom: 20px; }
     height: 30px;
 }
 
+/* 위치 */
 #gnb .btn_location {
     overflow: hidden;
     position: absolute;
@@ -129,12 +147,15 @@ header { margin-bottom: 20px; }
     width: 36px;
     height: 36px;
     border: none;
-    background: url(../img/ico_delivery_setting.);
+    background: 
+        url("../img/ico_delivery_setting.svg")
+        no-repeat 50% 50%;
     font-size: 0;
     text-indent: -9999px;
     color: pointer;
 }
 
+/* 장바구니 */
 #gnb .cart_count {
     position: absolute;
     right: -5px;
@@ -161,21 +182,29 @@ section {
     border: 1px solid blanchedalmond;
 }
 
+
+/* 카테고리 풀다운 메뉴 */
 #gnb .gnb_sub {
-    display: block;
+    display: none;
+    /* display: block; */
     overflow: hidden;
     position: absolute;
     top: 55px;
     left: 0;
-    width: 213px;
+    width: 219px;
     z-index: 300;
     padding-top: 1px;
 }
 
+/* 1차메뉴에 마우스 올렸을 때 */
 #gnb .gnb_sub:hover { width: 450px; }
 
-#gnb .gnb_sub .inner_sub ul.gnb_menu li:hover > ul.sub_menu {}
+/* 1차메뉴에 마우스 올렸을 때, 2차 메뉴 출력 */
+#gnb .gnb_sub .inner_sub ul.gnb_menu li:hover > ul.sub_menu {
+    display: block;
+}
 
+/* 1차 메뉴 */
 #gnb .gnb_sub .inner_sub {
     width: 100%;
     border: 1px solid #ddd;
@@ -199,7 +228,7 @@ section {
     overflow: hidden;
     width: 100%;
     height: 40px;
-    padding: 8px 0 0 14px;
+    padding: 8px 0 0 14px; /* top right bottom left */
     cursor: pointer;
 }
 
@@ -215,6 +244,7 @@ section {
     height: 24px;
 }
 
+/* 메뉴 아이콘 활성화/비활성화 */
 #gnb .gnb_sub .ico .ico_off { display: block; }
 #gnb .gnb_sub .ico .ico_on { display: none; }
 #gnb .gnb_sub ul.gnb_menu li:hover .ico_off { display: none; }
@@ -233,7 +263,9 @@ section {
     white-space: nowrap;
 }
 
+/* 2차 메뉴 */
 #gnb .gnb_sub ul.sub_menu {
+    display: none;
     position: absolute;
     top: 0;
     left: 200px;
