--- a/Day10/01_grid/css/grid.css
+++ b/Day10/01_grid/css/grid.css
@@ -69,3 +69,70 @@
 .row-gap { row-gap: 100px; }
 .column-gap { column-gap: 200px; }
 .gap { gap: 100px 200px; }
+
+.auto-rows { grid-auto-rows: 300px; }
+.auto-columns { grid-auto-columns: 300px; }
+.auto-item { background-color: pink;}
+
+.auto-columns .item:nth-child(3n-2) { grid-column: 1/2; }
+.auto-columns .item:nth-child(3n-1) { grid-column: 2/3; }
+.auto-columns .item:nth-child(3n-2) { grid-column: 3/4; }
+
+.auto-columns .auto-item:nth-child(3n-2) { grid-column: 4/5; grid-row: 1/2;}
+.auto-columns .auto-item:nth-child(3n-1) { grid-column: 5/6; grid-row: 1/2;}
+
+.auto-flow-row { grid-auto-flow: row; }
+.auto-flow-column { grid-auto-flow: column;}
+
+.grid-rows-columns {
+    grid: 100px 200px / 1fr 3fr;
+}
+
+.grid-grid-template {
+    grid:
+        "header header header" 100px
+        "main main main" 200px
+        "footer footer footer" 150px
+        / 200px 300px 400px
+    ;
+}
+.align { height: 1000px;}
+.align-start { align-content: start; }
+.align-end { align-content: end; }
+.align-center { align-content: center; }
+.align-space-between { align-content: space-between; }
+.align-space-around { align-content: space-around; }
+.align-space-evenly { align-content: space-evenly; }
+.align-space-stretch { align-content: stretch; }
+
+.justify { height: 1000px;}
+.justify-start { align-content: start; }
+.justify-end { align-content: end; }
+.justify-center { align-content: center; }
+.justify-space-between { align-content: space-between; }
+.justify-space-around { align-content: space-around; }
+.justify-space-evenly { align-content: space-evenly; }
+.justify-space-stretch { align-content: stretch; }
+
+.place { height: 1000px; }
+.place-center-center {
+    place-content: center center;
+}
+
+.items {
+    width: 50px;
+    height: 50px;
+    margin: 20px;
+    font-size: 30px;
+    text-align: center;
+    line-height: 50px;
+    background-color: powderblue;
+    color: white;
+    box-sizing: border-box;
+}
+
+.align-item-start { align-items: start; }
+.align-item-end { align-items: end; }
+.align-item-center { align-items: center; }
+.align-item-stretch { align-items: stretch; }
+.align-item-stretch .items { height: auto; }
