--- a/Day05/02_flex-item/css/01_flex-item.css
+++ b/Day05/02_flex-item/css/01_flex-item.css
@@ -1,12 +1,14 @@
+
 .container {
     width: 100%;
     margin: 0 auto;
-    border: 3px dashed orange
+    border: 3px dashed orange;
 }
 
+/* container & item */
 .flex-container {
     display: flex;
-    border: 1px solid lightcoral
+    border: 1px solid lightcoral;
 }
 
 .item {
@@ -22,8 +24,36 @@
     box-sizing: border-box;
 }
 
+/* order */
 .order-1 { order: -1; }
 .order1 { order: 1; }
 .order2 { order: 2; }
 .order3 { order: 3; }
 .order4 { order: 4; }
+
+/* grow */
+.grow1 { flex-grow: 1;}
+.grow2 { flex-grow: 2;}
+
+/* shrink */
+.shrink1 { flex-shrink: 1; width: 800px; }
+.shrink3 { flex-shrink: 3; width: 800px; }
+
+/* basis */
+.basis100 { flex-basis: 100px; }
+.basis200 { flex-basis: 200px; }
+
+/* flex */
+/* [flex-grow] [flex-shrink] [flex-basis] */
+.flex1 { flex: 1 1 200px; }
+.flex2 { flex: 2 2 300px; }
+
+/* align-self */
+.align-self { height: 600px; }
+.self-start {align-self: flex-start; }
+.self-end {align-self: flex-end; }
+.self-center {align-self: center; }
+.self-stretch {align-self: stretch; height: auto; }
+.self-base {align-self: baseline; }
+
+
