--- a/Day13/css/style.css
+++ b/Day13/css/style.css
@@ -12,12 +12,16 @@ a img {border: none;}
 li {list-style: none;}
 address, em, i {font-style: normal;}
 
+/* 레이아웃 */
+/* 전체 폰트 */
 body { font-family: 'Noto Sans KR', sans-serif; font-size: 14px; }
+/* 포인트 폰트 */
 .en {font-family: 'Exo 2', sans-serif;}
 .wrap { margin: 0 auto; }
 
+/* 헤더 */
 header {
-    width: 100px;
+    width: 100%;
     height: 100px;
     position: fixed;
     top: 0;
@@ -34,22 +38,25 @@ header {
     overflow: hidden;
 }
 
+/* 로고 */
 .innerHeader .logo { float: left; }
 .innerHeader .logo img { width: 100%; height: auto; }
 
+/* GNB */
 .innerHeader .gnb { float: left; margin-left: 80px; }
 .innerHeader .gnb li { float: left; margin-right: 80px; }
 .innerHeader .gnb li a {
-    display: block; width: 100px; height: 100px; text-align: center;
+    display: block; width: 100%; height: 100%; text-align: center;
     color: #fff; font-size: 16px;
 }
 .innerHeader .gnb li a:hover,
 .innerHeader .gnb li a:focus { color: #ff8342; }
 
+/* TNB */
 .innerHeader .tnb { float: right; }
 .innerHeader .tnb li { float: left; margin-right: 25px; }
 .innerHeader .tnb li a {
-    display: block; width: 100px; height: 100px; text-align: center;
+    display: block; width: 100%; height: 100%; text-align: center;
     color: #fff; font-size: 16px;
 }
 
@@ -57,6 +64,7 @@ header {
     color: #ff8342; transition: all 0.3s;
 }
 
+/* 제품검색 */
 .innerHeader .tnb li:last-child a {
     width: 105px;
     line-height: 2;
@@ -69,10 +77,12 @@ header {
     background-color: #fff;
 }
 
+/* 섹션 : 메인 */
 section.main {
     width: 100%; height: 100vh;
     background: url(../img/vis_4.jpg) no-repeat center/cover;
     position: relative;
+    /* 배경 스크롤 고정여부 */
     background-attachment: fixed;
 }
 section.main .mainTitle {
@@ -82,10 +92,13 @@ section.main .mainTitle {
     transform: translate(-50%, -50%);
     color: #fff;
     text-align: center;
-    text-shadow: 0 0 5px rgba(8,8,8,0.5);
+    /* x축 위치, y축 위치, 블러크기, 색상 */
+    text-shadow: 5px 5px 5px rgba(8,8,8,0.5);
+    /* 애니메이션 적용 */
     animation-name: mainTitle; animation-duration: 1s;
 }
 
+/* 불투명해지면서 위로 올라오는 애니메이션 */
 @keyframes mainTitle {
     0% { opacity: 0; top: 60% }
     30% { opacity: 0; top: 60% }
@@ -99,4 +112,131 @@ section.main .mainTitle .view {
     display: block; width: 180px; margin: 0 auto;
     padding: 8px 0; font-size: 15px; text-transform: uppercase; letter-spacing: 1px;
     border: 1px solid #fff; border-radius: 40px; overflow: hidden;
+    position: relative;
 }
+
+section.main .mainTitle .view:after {
+    content: ''; width: 0; height: 100%;
+    background-color: rgba(255,255,255,0.4);
+    position: absolute;
+    left: 0; top: 0;
+}
+
+section.main .mainTitle .view:hover:after {
+    animation-name: hoverRightSlide;
+    animation-duration: 0.6s;
+    animation-timing-function: linear;
+}
+
+@keyframes hoverRightSlide {
+    0% { left: 0; }
+    50% { width: 100%; left: 0; }
+    100% { left: 100%; }
+}
+
+/* 섹션 : title (공통) */
+section .title { color: #000; text-align: center; }
+section .title h2 { font-size: 45px; margin-bottom: 5px; font-weight: normal; }
+section .title h2 span { color: #ff8342; }
+section .title p { font-size: 18px; color: #555;}
+
+/* 섹션 : about */
+section.about { background-color: #fff; padding: 80px 0; }
+section.about ul { 
+    margin: 30px auto; width: 1400px; border-bottom: 1px solid #ddd; overflow: hidden; }
+section.about ul li { float: left; width: calc(100%/3); }
+section.about ul li a { display: block; width: 100%; height: 100%; }
+section.about ul li a p.img { width: 100%; overflow: hidden; }
+section.about ul li a p.img img { width: 100%; height: auto; transition: all .8s; }
+
+
+/* 마우스 hover/foucs - 이미지 확대 */
+section.about ul li a:hover,
+section.about ul li a:focus {
+    transform: scale(1.2);
+    transition: all 1s;
+}
+
+section.about ul li a .text { padding: 30px; }
+section.about ul li a .text h3 { font-size: 20px; margin-bottom: 10px; }
+section.about ul li a .text p { font-size: 16px; margin-bottom: 10px; }
+section.about ul li a .text p.more {
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-left: 40px;
+    position: relative;
+}
+
+/* 폰트어썸 아이콘 커스텀 */
+section.about ul li a .text p.more::before {
+    font-family: FontAwesome;
+    content: "\f178";
+    font-size: 15px;
+    background-color: #ff8342;
+    width: 30px;
+    line-height: 30px;
+    position: absolute;
+    left: 0;
+    border-radius: 50%;  
+}
+
+section.about ul li a .text p.more:hover:before {
+    color: #ff8342;
+    background-color: black;
+}
+
+/* 섹션 : innovations */
+section.innovations { margin-bottom: 150px; }
+section.innovations .imgBox {
+    width: 1400px;height: 540px; margin: 50px auto 0;
+    background: url(../img/product_1.jpg) no-repeat center/cover;
+    position: relative;
+ }
+section.innovations .imgBox .inner {
+    background-color: #3a3c4e;
+    width: 80%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -50px;
+}
+section.innovations .imgBox .inner h3 {
+    background-color: #fff; padding: 25px 45px; box-sizing: border-box; font-size: 18px;
+}
+section.innovations .imgBox .inner h3 span { color: #ff8342; }
+section.innovations .imgBox .inner .bottom {
+    padding: 35px 85px; box-sizing: border-box; color: #fff; overflow: hidden;
+    line-height: 1.6;
+}
+section.innovations .imgBox .inner .bottom p { float: left; }
+section.innovations .imgBox .inner .bottom a {
+    float: right;
+    padding: 7px 30px; background-color: #ff8342; border-radius: 50px;
+}
+section.innovations .imgBox .inner .bottom a:hover,
+section.innovations .imgBox .inner .bottom a:focus {
+    background-color: #f86010;
+}
+
+/* section.me */
+section.me {
+    margin-bottom: 150px; padding: 80px 0;
+    background: url(../img/me.jpg) no-repeat center/cover; 
+}
+
+section.me ul.list {
+    width: 1400px; margin: 50px auto; border-top: 2px solid #000; border-bottom: 2px solid #000; 
+}
+section.me ul.list > li {}
+section.me ul.list > li:nth-child(1) {}
+section.me ul.list li h3 {}
+section.me ul.list li h3 span {}
+section.me ul.list li > p {}
+section.me ul.list li > a {}
+section.me ul.list li > a span {}
+section.me ul.in {}
+section.me ul.in li {}
+section.me ul.in li em {}
+section.me ul.in li p {}
+section.me ul.in li p:before {}
+section.me button {}
